[gd_scene load_steps=7 format=2]

[ext_resource path="res://Levels/Interactables/BlackHoles/BlackHole.gd" type="Script" id=1]
[ext_resource path="res://Levels/Interactables/BlackHoles/BlackHoleSmear.png" type="Texture" id=2]
[ext_resource path="res://Levels/Interactables/BlackHoles/BlackHole.png" type="Texture" id=3]
[ext_resource path="res://Levels/Interactables/BlackHoles/BlackHole.ogg" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 45.0

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 6, 6 )

[node name="BlackHole" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="." index="0"]

z_index = -1
texture = ExtResource( 2 )
_sections_unfolded = [ "Z Index" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

z_index = -1
texture = ExtResource( 3 )
_sections_unfolded = [ "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.28
one_shot = true
autostart = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Area2D" type="Area2D" parent="." index="5"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="." index="6"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="body_entered" from="." to="." method="_on_BlackHole_entered"]

[connection signal="body_exited" from="." to="." method="_on_BlackHole_exited"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_entered"]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_completed"]


